[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dns-env"
version = "0.1.0"
description = "DNS Zone File Debugging Environment for OpenEnv — an RL environment where agents debug and configure DNS zone files."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]
